# models

./: CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.md
docs/api/: index.md
docs/book-guide/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/reference/: academic-references.md  api-stability.md  architecture.md  model-families.md  release-gates.md
docs/user-guide/: data-contracts.md  direct-asset-prediction.md  index.md  integration.md  latent-factor-models.md  latent-factor-pipelines.md  portfolio-learning.md  stochastic-discount-factor.md  training-procedures.md
examples/: direct_asset_prediction.py  latent_factor_pipeline.py  portfolio_learning.py  stochastic_discount_factor.py
src/ml4t/models/: __init__.py  api.py  pipelines.py  types.py
src/ml4t/models/_internal/: cae_nn.py  latent_factor_utils.py  sae_nn.py  sdf_nn.py  stochastic_discount_factor_nn.py  torch_runtime.py
src/ml4t/models/asset_prediction/: __init__.py  base.py  sae.py
src/ml4t/models/configs/: __init__.py  asset_prediction.py  base.py  latent_factor.py  portfolio.py
src/ml4t/models/integration/: __init__.py  backtest.py  data.py  surfaces.py
src/ml4t/models/latent_factors/: __init__.py  cae.py  ipca.py  rp_pca.py  sae.py
src/ml4t/models/portfolio/: __init__.py  base.py  deep_portfolio.py  linear.py  losses.py  lstm.py  postprocessors.py
src/ml4t/models/sdf/: __init__.py  base.py  mapper.py  model.py
src/ml4t/models/stochastic_discount_factor/: __init__.py  base.py  mapper.py  model.py
tests/: test_cae.py  test_examples.py  test_integration_backtest.py  test_integration_data.py  test_integration_surfaces.py  test_ipca.py  test_ipca_normalization.py  test_portfolio.py  test_public_api.py  test_repo_hygiene.py  test_rp_pca.py  test_sae.py  test_sdf.py  test_stochastic_discount_factor.py  test_torch_runtime.py  test_types.py
